test/parser/should_fail/import.souc.bad
Import BadCapital

main() = do
	print "bad capital Import"
